--- a/src/App.css
+++ b/src/App.css
@@ -31,8 +31,8 @@
   justify-content: space-between;
   width: 100%;
   background-color: #45A8F0;
-  height: 30px;
-  line-height: 30px;
+  height: 25px;
+  line-height: 25px;
   font-size: 20px;
   padding-top: 20px;
   padding-bottom: 20px;
@@ -56,6 +56,7 @@
   display: flex;
   flex-direction: column;
   align-items: center;
+  margin-bottom: 100px;
 }
 
 .MainLogo {
