--- a/src/css/SignUp.css
+++ b/src/css/SignUp.css
@@ -31,7 +31,10 @@
     border-radius: 13px;
     border: 3px solid #EAE5E5;
     width: 100%;
-   
+    padding-left: 15px;
+    /* 왼쪽 여백을 조절합니다. */
+    box-sizing: border-box;
+    
 }
 .SignUpInputContainer > button{
     background-color: #45A8F0;
