--- a/src/css/Login.css
+++ b/src/css/Login.css
@@ -1,7 +1,7 @@
 .mainbg {
     height: 200px;
     margin-top: 30px;
-    background-image: url(../picture/login.png);
+    background-image: url(../loginpictures/login.png);
     background-size: contain;
     background-position: center;
     background-repeat: no-repeat;
