--- a/src/css/SignUp.css
+++ b/src/css/SignUp.css
@@ -1,7 +1,7 @@
 .SignUpmainbg {
     height: 200px;
     margin-top: 30px;
-    background-image: url(../picture/signup.jpg);
+    background-image: url(../loginpictures/signup.jpg);
     background-size: contain;
     background-position: center;
     background-repeat: no-repeat;
@@ -31,10 +31,10 @@
     border-radius: 13px;
     border: 3px solid #EAE5E5;
     width: 100%;
-    padding-left: 15px;
+    padding-left: 20px;
     /* 왼쪽 여백을 조절합니다. */
     box-sizing: border-box;
-    
+    font-weight: 600;
 }
 .SignUpInputContainer > button{
     background-color: #45A8F0;
