--- a/src/App.css
+++ b/src/App.css
@@ -1,93 +1,224 @@
 .App {
   text-align: center;
   margin: 0;
+  
+}
+html{
+  
 }
 
 .MainTopNav {
   padding: 0px;
-  font-size: 32px;
-  color: #45A8F0;
+  font-size: 27px;
   font-weight: 700;
-  position: fixed;
-  top: 0;
   width: 100%;
-  border-bottom: 1px solid #E4E0E0;
+  
   background-color: white;
-  transition: opacity 0.5s ease;
+  border-radius: 0 0 35px 35px;
+  transition: all 0.5s;
 }
-
-.MainTopNav.hidden {
+.hidden{
+  height: 0;
   opacity: 0;
-  /* 스크롤 위치에 따라 투명도를 조절하여 요소를 사라지게 함 */
-  pointer-events: none;
-  /* 숨겨진 요소에 이벤트를 비활성화하여 클릭 등의 상호 작용을 막음 */
+}
+.MainTopNav.hidden > * {
+  height: 0; /* .MainTopNav의 자식 요소들도 함께 숨기기 위해 height를 0으로 설정합니다. */
+  overflow: hidden;
+  opacity: 0; 
+  transition: all 0.5s;/* 필요한 경우 overflow를 숨깁니다. */
+}
+.MainTopNavListBox{
+  display: flex;
+  justify-content: space-between;
+  margin: 0 auto;
+  width: 85%;
+  font-size: 15px;
+  font-weight: 800;
+  transition: all 0.5s;
+}
+.MainTopNavListactive{
+  text-decoration: underline!important;
+  text-underline-offset: 10px!important;
+  text-decoration-thickness: 4px!important; 
+  color: #e84f13!important;
+  
+}
+.MainSectionLogoContainer{
+  
+  padding-top: 10px;
+  margin-top: 30px;
+  font-weight: 500;
+  font-size: 25px;
+
+}
+.MainSectionLogoBox {
+  text-align: center;
+  transition: all 0.7s;
+  margin-top: 30px;
+  width: 300vw;
+  overflow-x: hidden; 
+  display: flex;/* 가로 스크롤을 숨깁니다. */
 }
 
+.MainSectionLogoBoxSection {
+  width: 100vW; /* 한 번에 하나의 섹션이 보이도록 너비를 조정합니다. */
+  display: inline-block; /* 인라인 블록 요소로 설정하여 요소들을 옆으로 나열합니다. */
+  vertical-align: top;
+  
+  overflow-x: hidden;/* 섹션을 위쪽에 정렬합니다. */
+}
+
+.mainSectionImg, .mainSectionText {
+  display: inline-block; /* 인라인 블록 요소로 설정하여 가로 정렬합니다. */
+  vertical-align: middle; /* 수직 가운데 정렬합니다. */
+}
+
+.flex-container {
+  display: flex;
+  align-items: center; /* 요소들을 수직 가운데로 정렬 */
+  margin-left: 4%;
+}
+
+
+.mainSectionImg {
+  width: 30%;
+  margin-top: 6%;
+  border-radius: 20px;
+  border: 1px solid rgb(209, 204, 204);
+}
+.mainSectionText{
+  margin-left: 5%;
+  font-size: 20px;
+  font-weight: 600;
+}
+.MainSectionLogo{
+  display: flex;
+  padding-left: 5%;
+  align-items: center;
+  height: 40px;
+}
+.MainTopLogoBox{
+  width: 90%;
+  display: flex;
+  justify-content: center;
+  margin: 0 auto;
+}
+.MainSectionTopBox{
+  width: 95%;
+  margin-top: 30px!important;
+  text-align: left;
+  border-radius: 10px;
+  background-color: #ffffe2;
+  padding-left: 5%;
+  
+}
+.MainSecionGage{
+  margin-left: 5%;
+  border-radius: 5px;
+
+}
+.MainSectionTopButton{
+  width: 140px;
+  height: 40px;
+  margin-bottom: 30px;
+  margin-top: 10px;
+  background-color: #e84f13;
+  border-radius: 7px;
+  border: none;
+  font-size: 18px;
+  color: white;
+}
+
+.Logoname{
+  margin:0;
+  line-height: 80px;
+  color: #e84f13;
+  text-align: left;
+  padding-left: 7%;
+}
+.LogoFirstName{
+  font-size: 20px;
+  text-align: left;
+  font-weight: 500;
+  margin-bottom: 0;
+  margin-top: 0;
+  padding-top: 50px;
+  padding-left: 7%;
+  border-top: 0px;
+  
+}
 .MainBottomNav {
   position: fixed;
   bottom: 0;
   font-weight: 700;
   display: flex;
-  justify-content: space-between;
+  justify-content: space-around;
   width: 100%;
-  background-color: #45A8F0;
-  height: 25px;
-  line-height: 25px;
+  background-color: white;
+  height: 35px;
+  line-height: 35px;
   font-size: 20px;
   padding-top: 20px;
   padding-bottom: 20px;
+  border-radius: 30px 30px 0 0;
 
 }
 
 
 
 .box {
-  width: 90%;
-  height: 180px;
+  width: 150px;
+  height: 150px;
   border: 2px solid #D6EEFF;
   margin-top: 30px;
   border-radius: 20px;
-  background-color: #D6EEFF;
-
+  background-color: white;
+  margin: 0 auto;
+  
+  
 }
-
-.boxcontainer {
+.css-10mzr36-MuiGrid-root>.MuiGrid-item {
+  padding-top: 32px;
+}
+/* .boxcontainer {
   text-align: center;
   display: flex;
   flex-direction: column;
   align-items: center;
   margin-bottom: 100px;
-}
+ 
+} */
 
 .MainLogo {
   text-align: left;
   padding-left: 5%;
+  color: white;
+  font-weight: 400;
+  font-size: 25px;
 }
 
-.MainInput {
-  width: 90%;
-  height: 45px;
-  line-height: 45px;
-  border-radius: 13px;
-  background-color: #D6EEFF;
-  border: 1px solid #45A8F0;
-}
+
 
 .MainList {
-  width: 18%;
-  height: 50px;
+  width: 360px;
+  height: 150px;
+  margin-bottom: 20px;
   border: 1px solid #45A8F0;
-  border-radius: 10px;
+  border-radius: 15px;
+  background-color: white;
 
 }
 
 .MainListContainer {
   display: flex;
   justify-content: space-between;
+  flex-direction: column;
   padding-left: 5%;
   padding-right: 5%;
   margin-top: 5%;
-
+  height: 150px;
+  align-items: center;
+  margin-top: 0;
 }
 
 input::placeholder {
@@ -117,4 +248,28 @@ input::placeholder {
   to {
     transform: rotate(360deg);
   }
+}
+.css-dpjnhs-MuiInputBase-root-MuiOutlinedInput-root {
+  border-radius: 20px!important;
+}
+.before{
+  width: 60px;
+  height: 30px;
+  background-color: #e84f13;
+  color: white;
+  font-weight: 600;
+  border: none;
+  border-radius: 5px;
+  margin-right: 10px;
+
+}
+.next{
+  width: 60px;
+  height: 30px;
+  background-color: #e84f13;
+  color: white;
+  font-weight: 600;
+  border: none;
+  border-radius: 5px;
+  margin-left: 10px;
 }
