--- a/src/css/Camera.css
+++ b/src/css/Camera.css
@@ -1,21 +1,74 @@
-.CameraContainer{
-    padding-top: 180px;
+.CameraContainer {
+
     display: flex;
     flex-direction: column;
     align-items: center;
 }
-.CameraLogo img{
+.CameraLogo{
+    
+    margin-top: 10%;
     width: 50%;
 }
-.CameraButton{
-    background-color: #45A8F0;
-    width: 232px;
-    height: 51px;
+.CameraLogo img {
+    width: 50%;
+    padding: 10%;
+    border: 5px solid #e84f13;
+    border-radius: 30px;
+}
+.PhotoUpload{
+    width: 100%;
+}
+.CameraButton {
+    background-color: #e84f13;
+    width: 150px;
+    height: 30px;
     margin-top: 60px;
-    border-radius: 10px;
+    border-radius: 20px;
     border: none;
     color: white;
     font-size: 16px;
     font-weight: 600;
     letter-spacing: 1px;
+    margin-left: 5%;
+    margin-right: 5%;
+}
+.CameraButtonContainer{
+    display: flex;
+    width: 100%;
+    justify-content: center;
+    position: fixed;
+    bottom: 10%;
+}
+
+.CameraContainer {
+    opacity: 0;
+
+}
+
+.CameraContainer.active {
+    opacity: 1;
+    transition: all 0.6s;
+}
+.UploadPhotoSee>img{
+    width: 60%;
+    border: 1px solid rgb(226, 224, 224);
+    margin-top: 10%;
+    border-radius: 20px;
+}
+
+
+
+.CameraMainTopNav {
+    padding: 0px;
+    font-size: 32px;
+    font-weight: 700;
+    width: 100%;
+    height: 0px;
+    background-color: white;
+    border-radius: 0 0 35px 35px;
+    transition: all 0.5s;
+}
+
+.CameraActive {
+    height: 720px;
 }
