--- a/src/App.css
+++ b/src/App.css
@@ -15,17 +15,14 @@ html{
   
   background-color: white;
   border-radius: 0 0 35px 35px;
-  transition: all 0.5s;
+  transition: all 0.96s;
 }
 .hidden{
   height: 0;
   opacity: 0;
 }
-.MainTopNav.hidden > * {
-  height: 0; /* .MainTopNav의 자식 요소들도 함께 숨기기 위해 height를 0으로 설정합니다. */
-  overflow: hidden;
-  opacity: 0; 
-  transition: all 0.5s;/* 필요한 경우 overflow를 숨깁니다. */
+.MainTopNavList.active{
+  transition: all 0.5s;
 }
 .MainTopNavListBox{
   display: flex;
@@ -34,14 +31,18 @@ html{
   width: 85%;
   font-size: 15px;
   font-weight: 800;
-  transition: all 0.5s;
+  transition: all 3s;
 }
-.MainTopNavListactive{
+.MainTopNavList.active{
   text-decoration: underline!important;
   text-underline-offset: 10px!important;
   text-decoration-thickness: 4px!important; 
   color: #e84f13!important;
+  transition: all 0.5s;
   
+}
+.MainTopNavList{
+  transition: all 0.5s ease;
 }
 .MainSectionLogoContainer{
   
@@ -161,6 +162,7 @@ html{
   padding-top: 20px;
   padding-bottom: 20px;
   border-radius: 30px 30px 0 0;
+  color: #9a9a9a;
 
 }
 
