--- a/src/css/Login.css
+++ b/src/css/Login.css
@@ -1,10 +1,12 @@
 .mainbg {
-    height: 200px;
-    margin-top: 30px;
-    background-image: url(../loginpictures/login.png);
+    width: 100%;
+    height: 300px;
+    margin-top: -10px;
+    background-image: url(../loginpictures/login.jpg);
     background-size: contain;
     background-position: center;
-    background-repeat: no-repeat;
+   
+    
 }
 .LoginTop{
     text-align: left;
@@ -37,7 +39,7 @@
     
 }
 .LoginInputContainer > button{
-    background-color: #45A8F0;
+    background-color: #e84f13;
     width: 232px;
     height: 51px;
     margin-top: 60px;
@@ -49,5 +51,5 @@
     letter-spacing: 1px;
 }
 .LoginBottom > p{
-    color:#45A8F0 ;
+    color:#e84f13 ;
 }
