--- a/src/css/SignUp.css
+++ b/src/css/SignUp.css
@@ -1,10 +1,11 @@
 .SignUpmainbg {
-    height: 200px;
-    margin-top: 30px;
+    
+    height: 300px;
+    margin-top: -10px;
     background-image: url(../loginpictures/signup.jpg);
     background-size: contain;
     background-position: center;
-    background-repeat: no-repeat;
+   
 }
 .SignUpTop{
     text-align: left;
@@ -37,7 +38,7 @@
     font-weight: 600;
 }
 .SignUpInputContainer > button{
-    background-color: #45A8F0;
+    background-color: #e84f13;
     width: 232px;
     height: 51px;
     margin-top: 60px;
@@ -49,5 +50,5 @@
     letter-spacing: 1px;
 }
 .SignUpBottom > p{
-    color:#45A8F0 ;
+    color:#e84f13 ;
 }
