--- a/src/css/SignUp.css
+++ b/src/css/SignUp.css
@@ -2,7 +2,7 @@
     
     height: 300px;
     margin-top: -10px;
-    background-image: url(../loginpictures/signup.jpg);
+    background-image: url(../../public/picture/signup.jpg);
     background-size: contain;
     background-position: center;
    
