--- a/src/App.css
+++ b/src/App.css
@@ -1,11 +1,21 @@
 .App {
   text-align: center;
   margin: 0;
+  font-family: "Noto Sans KR", sans-serif;
+  font-optical-sizing: auto;
+  font-weight: 800;
+  font-style: normal;
+}
+@font-face {
+  font-family: 'BagelFatOne-Regular';
+  src: url('/src/font/BagelFatOne-Regular.ttf') format('woff2');
+  font-weight: 600;
+  font-style: normal;
   
 }
-html{
-  
-}
+
+
+
 
 .MainTopNav {
   padding: 0px;
@@ -13,6 +23,9 @@ html{
   font-weight: 700;
   width: 100%;
   
+}
+.Logoname{
+  font-family: 'BagelFatOne-Regular'!important;
   background-color: white;
   border-radius: 0 0 35px 35px;
   transition: all 0.96s;
@@ -259,11 +272,11 @@ input::placeholder {
   height: 30px;
   background-color: #e84f13;
   color: white;
-  font-weight: 600;
+  font-weight: 900;
   border: none;
   border-radius: 5px;
   margin-right: 10px;
-
+  
 }
 .next{
   width: 60px;
