--- a/src/css/Login.css
+++ b/src/css/Login.css
@@ -2,7 +2,7 @@
     width: 100%;
     height: 300px;
     margin-top: -10px;
-    background-image: url(../loginpictures/login.jpg);
+    background-image: url(../../public/picture/login.jpg);
     background-size: contain;
     background-position: center;
    
