--- a/src/App.css
+++ b/src/App.css
@@ -5,6 +5,7 @@
   font-optical-sizing: auto;
   font-weight: 800;
   font-style: normal;
+  font-size: 20px;
 }
 @font-face {
   font-family: 'BagelFatOne-Regular';
