--- a/src/css/Shop.css
+++ b/src/css/Shop.css
@@ -1,3 +1,11 @@
+@font-face {
+    font-family: 'BagelFatOne-Regular';
+    src: url('/src/font/BagelFatOne-Regular.ttf') format('woff2');
+
+    font-style: normal;
+
+}
+
 .ShopTop {}
 
 .ShopTop>p {
@@ -17,7 +25,7 @@
 
 .shopbox {
     width: 150px;
-    height: 150px;
+    height: 170px;
     border: 2px solid #f2f2f2;
     margin-top: 30px;
     border-radius: 20px;
@@ -40,10 +48,10 @@
 }
 
 .ShopDetailTop {
-    width: 90%;
+    width: 80%;
     height: 180px;
     border: 2px solid #e84f13;
-    margin-top: 30px;
+    margin-top: 110px;
     border-radius: 20px;
     background-color: #D6EEFF;
 }
@@ -57,6 +65,7 @@
 .ShopDetailSection {
     margin-top: 5%;
     text-align: left;
+    font-family: 'BagelFatOne-Regular' !important;
 }
 
 .ShopDetailBottomBt {
@@ -70,20 +79,26 @@
     font-size: 16px;
     font-weight: 600;
     letter-spacing: 1px;
+    font-family: "Noto Sans KR", sans-serif !important;
+    font-optical-sizing: auto;
+    font-weight: 400 !important;
+    font-style: normal;
 }
 
 .ShopDetailButton {
     width: 50%;
     height: 30px;
-
+    font-family: 'BagelFatOne-Regular' !important;
 }
 
 .css-19midj6:nth-child(3) {
     text-align: center !important;
+
 }
 
 .ShopImage {
     border-radius: 20px 20px 0 0;
+    border-bottom: 1px solid silver;
 }
 
 .css-1d9bq45-MuiButtonGroup-root .MuiButtonGroup-lastButton,
@@ -99,4 +114,26 @@
 
 .css-1d9bq45-MuiButtonGroup-root {
     border-radius: 13px !important;
+}
+
+.IntroDivider {
+    font-family: 'BagelFatOne-Regular' !important;
+}
+
+.css-r40f8v-MuiTypography-root {
+
+    font-family: "Noto Sans KR", sans-serif !important;
+    font-optical-sizing: auto;
+    font-weight: 100 !important;
+    font-style: normal;
+    margin-top: 10px !important;
+
+}
+
+.css-18k87ye-MuiTypography-root {
+    font-family: "Noto Sans KR", sans-serif !important;
+    font-optical-sizing: auto;
+    font-weight: 500 !important;
+    font-style: normal;
+
 }
