엔드포인트

--- a/src/App.css
+++ b/src/App.css
@@ -49,6 +49,7 @@
   font-size: 15px;
   font-weight: 800;
   transition: all 3s;
+  margin-top: -20px;
 }
 .MainTopNavList.active{
   text-decoration: underline!important;
