--- a/src/css/Login.css
+++ b/src/css/Login.css
@@ -1,6 +1,6 @@
 .mainbg {
     width: 100%;
-    height: 300px;
+    height: 230px;
     margin-top: -10px;
     background-image: url(../../public/picture/login.jpg);
     background-size: contain;
@@ -28,7 +28,7 @@
     align-items: center;
 }
 .LoginInputContainer > input{
-    margin-bottom: 25px;
+    margin-bottom: 15px;
     height: 50px;
     border-radius: 13px;
     border: 3px solid #EAE5E5;
@@ -42,7 +42,7 @@
     background-color: #e84f13;
     width: 232px;
     height: 51px;
-    margin-top: 60px;
+    margin-top: 30px;
     border-radius: 10px;
     border: none;
     color: white;
@@ -53,4 +53,7 @@
 .LoginBottom > p{
     color:#e84f13 ;
     font-size: 15px!important;
+}
+.error{
+    margin-bottom: 15px;
 }
