--- a/src/css/SignUp.css
+++ b/src/css/SignUp.css
@@ -1,6 +1,6 @@
 .SignUpmainbg {
     
-    height: 300px;
+    height: 230px;
     margin-top: -10px;
     background-image: url(../../public/picture/signup.jpg);
     background-size: contain;
@@ -28,7 +28,7 @@
     align-items: center;
 }
 .SignUpInputContainer > input{
-    margin-bottom: 25px;
+    margin-bottom: 15px;
     height: 50px;
     border-radius: 13px;
     border: 3px solid #EAE5E5;
@@ -42,7 +42,7 @@
     background-color: #e84f13;
     width: 232px;
     height: 51px;
-    margin-top: 60px;
+    margin-top: 30px;
     border-radius: 10px;
     border: none;
     color: white;
@@ -54,4 +54,7 @@
     color:#e84f13 ;
     font-size: 13px!important;
 
+}
+.error{
+    margin-bottom: 15px;
 }
