--- a/src/css/Camera.css
+++ b/src/css/Camera.css
@@ -99,17 +99,19 @@
     z-index: 9999;
     left: 0;
     top: 0;
-    width: 100%;
+    width: 100vw;
     height: 100%;
-    overflow: auto;
-    background-color: rgb(0, 0, 0);
-    background-color: rgba(0, 0, 0, 0.4); /* Black w/ opacity */
+    overflow: hidden;
+    background-color: rgba(0, 0, 0, 0.4);
     display: flex;
     justify-content: center;
     align-items: center;
-}
-
-.modal-content {
+  }
+  
+  .modal-content {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
     background-color: #fefefe;
     margin: auto;
     padding: 20px;
@@ -117,4 +119,26 @@
     width: 80%;
     max-width: 300px;
     text-align: center;
-}
+    position: relative;
+    font-size: 15px;
+    border-radius: 15px;
+    height: 300px; /* height set for the p elements to show in fixed size */
+    overflow: hidden;
+  }
+  
+  .modal-content p {
+    position: absolute;
+    opacity: 0;
+    transition: opacity 1s;
+    padding-top: 240px;
+    margin: 10px;
+  }
+  
+  .modal-content p.active {
+    opacity: 1;
+  }
+  .modal-content > span{
+    font-size: 20px;
+    color: #e84f13;
+  
+  }
